<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/Btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/Btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn3" />

    <Button
        android:id="@+id/Btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/Btn5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/Btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn6" />

    <Button
        android:id="@+id/Btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn7" />

    <Button
        android:id="@+id/Btn8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn8" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/Btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/Btn10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Btn9"
            android:text="@string/btn10" />

        <Button
            android:id="@id/Btn11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Btn10"
            android:text="@string/btn11" />

        <Button
            android:id="@+id/Btn12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Btn11"
            android:text="@string/btn12" />

    </RelativeLayout>
</LinearLayout>
